--- a/Sales_forecasting/GradientBoost.ipynb
+++ b/Sales_forecasting/GradientBoost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from sklearn.metrics import make_scorer\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
-    "\n",
+    "import xgboost\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "                                            #---- Machine learning ----#\n",
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "orders = pd.read_excel('../ex_retail2_forecasting_data.xlsx')"
+    "orders = pd.read_excel('../ex_retail2_forecasting_data.xlsx', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>InvoiceDate</th>\n",
        "      <th>StockCode</th>\n",
        "      <th>Quantity</th>\n",
@@ -79,7 +78,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>2009-12-01</td>\n",
        "      <td>10002</td>\n",
        "      <td>12</td>\n",
@@ -91,7 +89,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2009-12-01</td>\n",
        "      <td>10120</td>\n",
        "      <td>60</td>\n",
@@ -103,7 +100,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>2009-12-01</td>\n",
        "      <td>10125</td>\n",
        "      <td>5</td>\n",
@@ -115,7 +111,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>2009-12-01</td>\n",
        "      <td>10133</td>\n",
        "      <td>23</td>\n",
@@ -127,7 +122,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>2009-12-01</td>\n",
        "      <td>11001</td>\n",
        "      <td>2</td>\n",
@@ -142,22 +136,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 InvoiceDate StockCode  Quantity  TotalPrice  Week  Weekday  Day  \\\n",
-       "0           0  2009-12-01     10002        12       10.20    49        1    1   \n",
-       "1           1  2009-12-01     10120        60       12.60    49        1    1   \n",
-       "2           2  2009-12-01     10125         5        5.10    49        1    1   \n",
-       "3           3  2009-12-01     10133        23       26.35    49        1    1   \n",
-       "4           4  2009-12-01     11001         2        6.86    49        1    1   \n",
-       "\n",
-       "   UnitPrice  \n",
-       "0   0.850000  \n",
-       "1   0.210000  \n",
-       "2   1.020000  \n",
-       "3   1.145652  \n",
-       "4   3.430000  "
+       "  InvoiceDate StockCode  Quantity  TotalPrice  Week  Weekday  Day  UnitPrice\n",
+       "0  2009-12-01     10002        12       10.20    49        1    1   0.850000\n",
+       "1  2009-12-01     10120        60       12.60    49        1    1   0.210000\n",
+       "2  2009-12-01     10125         5        5.10    49        1    1   1.020000\n",
+       "3  2009-12-01     10133        23       26.35    49        1    1   1.145652\n",
+       "4  2009-12-01     11001         2        6.86    49        1    1   3.430000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,8 +367,8 @@
    ],
    "source": [
     "\n",
-    "param_distributions = {'n_estimators': [50,100,500,1000], 'learning_rate':[0.01, 0.05, 0.1],'max_features':['auto'], 'min_samples_leaf':[1, 3, 7, 10], 'min_samples_split':[2,5,10]}\n",
-    "grad_boost = RandomizedSearchCV(GradientBoostingRegressor(random_state=42), param_distributions, verbose=2, n_iter = 100,cv=5, scoring=rmse_cv)\n",
+    "param_distributions = {'n_estimators': [250, 750], 'learning_rate':[0.03, 0.06],'max_features':['auto'], 'min_samples_leaf':[3, 7], 'min_samples_split':[3, 8]}\n",
+    "grad_boost = RandomizedSearchCV(GradientBoostingRegressor(random_state=42), param_distributions, verbose=2, n_iter = 100,cv=2, scoring=rmse_cv)\n",
     "grad_boost.fit(X_train, y_train)\n"
    ]
   },
@@ -435,6 +422,18 @@
    ],
    "source": [
     "y_predict_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "param_distributions_x = {'n_estimators': [250, 750], 'learning_rate':[0.03, 0.06],'max_features':['auto'], 'min_samples_leaf':[3, 7], 'min_samples_split':[3, 8]}\n",
+    "XGboost = RandomizedSearchCV(XGboost(random_state=42), param_distributions, verbose=2, n_iter = 100,cv=2, scoring=rmse_cv)\n",
+    "XGboost.fit(X_train, y_train)\n"
    ]
   },
   {
