--- a/EDA/report.ipynb
+++ b/EDA/report.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "      <td>85123A</td>\n",
        "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
        "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>Morning</td>\n",
        "      <td>2.55</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
@@ -102,7 +102,7 @@
        "      <td>71053</td>\n",
        "      <td>WHITE METAL LANTERN</td>\n",
        "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>Morning</td>\n",
        "      <td>3.39</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
@@ -113,7 +113,7 @@
        "      <td>84406B</td>\n",
        "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
        "      <td>8</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>Morning</td>\n",
        "      <td>2.75</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
@@ -124,7 +124,7 @@
        "      <td>84029G</td>\n",
        "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
        "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>Morning</td>\n",
        "      <td>3.39</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
@@ -135,7 +135,7 @@
        "      <td>84029E</td>\n",
        "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
        "      <td>6</td>\n",
-       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>Morning</td>\n",
        "      <td>3.39</td>\n",
        "      <td>17850.0</td>\n",
        "      <td>United Kingdom</td>\n",
@@ -152,15 +152,15 @@
        "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
        "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
        "\n",
-       "          InvoiceDate  UnitPrice  CustomerID         Country  \n",
-       "0 2010-12-01 08:26:00       2.55     17850.0  United Kingdom  \n",
-       "1 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  \n",
-       "2 2010-12-01 08:26:00       2.75     17850.0  United Kingdom  \n",
-       "3 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  \n",
-       "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  "
+       "  InvoiceDate  UnitPrice  CustomerID         Country  \n",
+       "0     Morning       2.55     17850.0  United Kingdom  \n",
+       "1     Morning       3.39     17850.0  United Kingdom  \n",
+       "2     Morning       2.75     17850.0  United Kingdom  \n",
+       "3     Morning       3.39     17850.0  United Kingdom  \n",
+       "4     Morning       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,14 +699,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +816,7 @@
        "4     Morning       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -837,90 +855,245 @@
        "      <th>StockCode</th>\n",
        "      <th>Description</th>\n",
        "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
        "      <th>UnitPrice</th>\n",
        "      <th>CustomerID</th>\n",
        "      <th>Country</th>\n",
        "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
-       "      <th>InvoiceDate</th>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>WHITE METAL LANTERN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Morning</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541904</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22613</td>\n",
+       "      <td>PACK OF 20 SPACEBOY NAPKINS</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Late morning</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541905</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22899</td>\n",
+       "      <td>CHILDREN'S APRON DOLLY GIRL</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Late morning</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541906</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>23254</td>\n",
+       "      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Late morning</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541907</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>23255</td>\n",
+       "      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Late morning</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>541908</th>\n",
+       "      <td>581587</td>\n",
+       "      <td>22138</td>\n",
+       "      <td>BAKING SET 9 PIECE RETROSPOT</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Late morning</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>12680.0</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>541909 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       InvoiceNo StockCode                          Description  Quantity  \\\n",
+       "0         536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
+       "1         536365     71053                  WHITE METAL LANTERN         6   \n",
+       "2         536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
+       "3         536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
+       "4         536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
+       "...          ...       ...                                  ...       ...   \n",
+       "541904    581587     22613          PACK OF 20 SPACEBOY NAPKINS        12   \n",
+       "541905    581587     22899         CHILDREN'S APRON DOLLY GIRL          6   \n",
+       "541906    581587     23254        CHILDRENS CUTLERY DOLLY GIRL          4   \n",
+       "541907    581587     23255      CHILDRENS CUTLERY CIRCUS PARADE         4   \n",
+       "541908    581587     22138        BAKING SET 9 PIECE RETROSPOT          3   \n",
+       "\n",
+       "         InvoiceDate  UnitPrice  CustomerID         Country  \n",
+       "0            Morning       2.55     17850.0  United Kingdom  \n",
+       "1            Morning       3.39     17850.0  United Kingdom  \n",
+       "2            Morning       2.75     17850.0  United Kingdom  \n",
+       "3            Morning       3.39     17850.0  United Kingdom  \n",
+       "4            Morning       3.39     17850.0  United Kingdom  \n",
+       "...              ...        ...         ...             ...  \n",
+       "541904  Late morning       0.85     12680.0          France  \n",
+       "541905  Late morning       2.10     12680.0          France  \n",
+       "541906  Late morning       4.15     12680.0          France  \n",
+       "541907  Late morning       4.15     12680.0          France  \n",
+       "541908  Late morning       4.95     12680.0          France  \n",
+       "\n",
+       "[541909 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group = df.groupby(['InvoiceDate'], as_index=False).count()\n",
+    "df_daytime = pd.DataFrame()\n",
+    "df_daytime['daytime'] = group['InvoiceDate']\n",
+    "df_daytime['transaction'] = group['InvoiceNo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>daytime</th>\n",
+       "      <th>transaction</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Afternoon</th>\n",
-       "      <td>67471</td>\n",
-       "      <td>67471</td>\n",
-       "      <td>67260</td>\n",
-       "      <td>67471</td>\n",
-       "      <td>67471</td>\n",
-       "      <td>55075</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Afternoon</td>\n",
        "      <td>67471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Early afternoon</th>\n",
-       "      <td>72259</td>\n",
-       "      <td>72259</td>\n",
-       "      <td>72136</td>\n",
-       "      <td>72259</td>\n",
-       "      <td>72259</td>\n",
-       "      <td>65062</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Early afternoon</td>\n",
        "      <td>72259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Early morning</th>\n",
-       "      <td>424</td>\n",
-       "      <td>424</td>\n",
-       "      <td>424</td>\n",
-       "      <td>424</td>\n",
-       "      <td>424</td>\n",
-       "      <td>424</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Early morning</td>\n",
        "      <td>424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Evening</th>\n",
-       "      <td>41059</td>\n",
-       "      <td>41059</td>\n",
-       "      <td>40877</td>\n",
-       "      <td>41059</td>\n",
-       "      <td>41059</td>\n",
-       "      <td>21253</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Evening</td>\n",
        "      <td>41059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Late afternoon</th>\n",
-       "      <td>132035</td>\n",
-       "      <td>132035</td>\n",
-       "      <td>131631</td>\n",
-       "      <td>132035</td>\n",
-       "      <td>132035</td>\n",
-       "      <td>71217</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Late afternoon</td>\n",
        "      <td>132035</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Late morning</th>\n",
-       "      <td>136383</td>\n",
-       "      <td>136383</td>\n",
-       "      <td>136062</td>\n",
-       "      <td>136383</td>\n",
-       "      <td>136383</td>\n",
-       "      <td>123591</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Late morning</td>\n",
        "      <td>136383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Morning</th>\n",
-       "      <td>92278</td>\n",
-       "      <td>92278</td>\n",
-       "      <td>92065</td>\n",
-       "      <td>92278</td>\n",
-       "      <td>92278</td>\n",
-       "      <td>70207</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Morning</td>\n",
        "      <td>92278</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -928,38 +1101,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                 InvoiceNo  StockCode  Description  Quantity  UnitPrice  \\\n",
-       "InvoiceDate                                                               \n",
-       "Afternoon            67471      67471        67260     67471      67471   \n",
-       "Early afternoon      72259      72259        72136     72259      72259   \n",
-       "Early morning          424        424          424       424        424   \n",
-       "Evening              41059      41059        40877     41059      41059   \n",
-       "Late afternoon      132035     132035       131631    132035     132035   \n",
-       "Late morning        136383     136383       136062    136383     136383   \n",
-       "Morning              92278      92278        92065     92278      92278   \n",
-       "\n",
-       "                 CustomerID  Country  \n",
-       "InvoiceDate                           \n",
-       "Afternoon             55075    67471  \n",
-       "Early afternoon       65062    72259  \n",
-       "Early morning           424      424  \n",
-       "Evening               21253    41059  \n",
-       "Late afternoon        71217   132035  \n",
-       "Late morning         123591   136383  \n",
-       "Morning               70207    92278  "
+       "           daytime  transaction\n",
+       "0        Afternoon        67471\n",
+       "1  Early afternoon        72259\n",
+       "2    Early morning          424\n",
+       "3          Evening        41059\n",
+       "4   Late afternoon       132035\n",
+       "5     Late morning       136383\n",
+       "6          Morning        92278"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "group = df.InvoiceDate.groupby(['InvoiceDate']).count()\n",
-    "\n",
-    "df_daytime['daytime'] = group['InvoiceDate']\n",
-    "df_daytime['transaction'] = group['InvoinceNo']\n",
-    "df"
+    "df_daytime"
    ]
   },
   {
